syntax = "proto3";
option csharp_namespace = "ProtosInterfaceDispatcher.Protos.Internal";
package product_internal;

import "google/protobuf/empty.proto";


message CreateProductRequestProxy {
  string id = 1;
  string name = 2;
  double price = 3;
  int32 stock_quantity = 4;
}

message ProductDto {
  string id = 1;
  string name = 2;
  double price = 3;
  int32 stock_quantity = 4;
}

message ProductIdRequest {
  string id = 1;
}

message ProductList {
  repeated ProductDto products = 1;
}

message DeleteProductResponse {
  bool success = 1;
}

service ProductService {
  rpc GetProduct(ProductIdRequest) returns (ProductDto);
  rpc CreateProduct(CreateProductRequestProxy) returns (ProductDto);
  rpc UpdateProduct(ProductDto) returns (ProductDto);
  rpc DeleteProduct(ProductIdRequest) returns (DeleteProductResponse);
  rpc ListProducts(google.protobuf.Empty) returns (ProductList);
}

